2010-06-18  Per Bothner  <per@bothner.com>

	* TreeList.java (nextMatching, nextDataIndex): Add missing
	FLOAT_FOLLOWS cases.

2009-11-19  Per Bothner  <per@bothner.com>

	* StableVector.java (adjustPositions, removePosRange): Fix thinkos.
	(checkInvariants): New commented-out test method.

2009-10-17  Per Bothner  <per@bothner.com>

	* FVector.java (make): New helper method.

2009-08-06  Per Bothner  <per@bothner.com>

	Fix for Savannah bug #27188 "Sequence printing".
	* SubSequence.java (startPos, endPos): New methods.

	* SubSequence.java (subSequencePos): New optimized method.
	* AbstractSequence.java (subList): Use subSequencePos.

2009-05-12  Per Bothner  <per@bothner.com>

	* UnescapedData.java: Make UnescapedData implement CharSequence.

2009-03-13  Per Bothner  <per@bothner.com>

	* FString.java:  Optimize by copying data field to local before loops.
	* FVector.java:  Likewise.

2009-03-07  Per Bothner  <per@bothner.com>

	* Strings.java (printQuoted): Also use R6RS escapes \a, \b, \v, and \f.

2008-11-10  Per Bothner  <per@bothner.com>

	* SimpleVector.java (resizeShift): New internal method.
	* GapVector.java (gapReserve(int,int)): Optimize so we don't
	copy twice when doing gapReserve(int) followed by shiftGap.
	* StableVector.java: Similar optimization.

	* CharBuffer.java (indexOf): Fix thinko.

2008-10-29  Per Bothner  <per@bothner.com>

	* SeqPosition.java (toString): Also write nextIndex().

2008-06-08  Per Bothner  <per@bothner.com>

	* ImmutablePair.java: New class, extends Pair.
	(setCar, setCdr): Throw exception.
	* Makefile.am: Update accordingly.
	* PairWithPosition.java: New extends ImmutableList.
	* Pair.java (car, cdr): Make protected.
	(setCdrBackdoor): New method.

2008-06-03  Per Bothner  <per@bothner.com>

	* Pair.java (car, cdr): Make non-public.
	(getCar, getCdr, setCar, setCdr): New public accessor methods.

2008-03-23  Per Bothner  <per@bothner.com>

	* EofClass.java (eofValue): Fix type of literal.  This fixes